k8s/staging/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: trustlink-fe
  namespace: trustlink-staging
  labels:
    run: trustlink-fe
spec:
  ports:
    - port: 3000
      protocol: TCP
  selector:
    app:  trustlink-fe
