k8s/staging/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: trustlink-fe
  namespace: trustlink-staging
  annotations:
    kubernetes.io/ingress.class: "traefik"
    cert-manager.io/cluster-issuer: letsencrypt-prod
    traefik.ingress.kubernetes.io/router.middlewares: trustlink-staging-redirect-https@kubernetescrd
spec:
  rules:
    - host: "trustlink.k3s.bangun-kreatif.com"
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: trustlink-fe
                port:
                  number: 3000
  tls:
    - hosts:
        - "trustlink.k3s.bangun-kreatif.com"
      secretName: trustlink-k3s-bangun-kreatif-com-tls
